# kyiv-engineering-bureau

./: .gitignore  README.md  pyproject.toml
core/: schema.py  settings.py  urls.py
shops/: admin.py  enums.py  models.py
shops/migrations/: 0001_initial.py  0002_auto_20231214_2022.py  0003_product_keywords_product_weight_alter_product_price_and_more.py
