[tool.poetry]
name = "core"
version = "0.1.1"
description = "TEST TASK FOR KYIV ENGINEERING BUREAU"
authors = ["Stanislav Buldyhin <faquedust@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0"
graphene-django = "^3.1.5"
pillow = "^10.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py312']
line-length = 120
skip-string-normalization = true
exclude = '''
(
    \.venv
    | .+/migrations
)
'''